# tv

./: LICENSE  README.md
android/: settings.gradle.kts
android/tv/: CMakeLists.txt  build.gradle.kts
android/tv/src/main/: AndroidManifest.xml
android/tv/src/main/cpp/: Android.mk  Application.mk  CircularBuffer.cpp  CircularBuffer.h  TcpClient.cpp  TcpClient.h  TcpDataSource.cpp  TcpDataSource.h  TcpSocket.cpp  TcpSocket.h  TlvProtocol.cpp  TlvProtocol.h  native-lib.cpp
android/tv/src/main/java/: PathRecordsManager.kt
android/tv/src/main/res/drawable/: background_loading_bg.xml  command_item_background.xml  dialog_background.xml  exit_dialog_background.xml  exit_dialog_button_cancel.xml  exit_dialog_button_confirm.xml  exit_dialog_header_bg.xml  ic_browse.xml  ic_exit_warning.xml  ic_file.xml  ic_folder.xml  ic_launcher_foreground.xml  ic_loading.xml  item_background.xml  item_background_normal.xml  item_focused.xml  loading_circle_bg.xml  loading_dialog_background.xml  menu_item_background.xml  video_item_background.xml
android/tv/src/main/res/layout/: activity_ffmpeg_video_player.xml  activity_file_list.xml  activity_main.xml  activity_photo_viewer.xml  activity_record_list.xml  activity_smb_video_player.xml  activity_video_player.xml  background_loading_indicator.xml  dialog_exit_confirm.xml  dialog_loading.xml  dialog_server_selection.xml  floating_time.xml  item_command.xml  item_file.xml  item_server.xml  item_video_record.xml  item_video_record_list.xml  video_options_dialog.xml
android/tv/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+86 files in other folders)
